--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,7 @@
 Flask==2.2.5
 selenium==4.10.0
 flask-cors==3.0.10
+webdriver-manager==3.8.6
+gunicorn==20.1.0
+requests==2.31.0
+beautifulsoup4==4.12.2
